[package]
name = "tplgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
structopt = "0.3"
handlebars = { version = "4", features = ["dir_source"] }
walkdir = "2"
exitcode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
log = "0.4"
env_logger = "0.9"